@@ -13,7 +13,8 @@
 - ESO: Implemented Eso.query_main() to query all instruments with the main form
   (even the ones without a specific form). [#976]
 - ESO: Disabled caching for all Eso.retrieve_data() operations. [#976]
-
+- vo_conesearch: Fix bad query for service that cannot accept '&&'
+  in URL. [#993]
 
 0.3.6 (2017-07-03)
 ------------------
